Pull working-area glossary terms into a separate list on small screens.
Enable a variation for small screen testing that pulls the glossary
terms into a separate list instead of highlighting them with
tooltips as usual, so people don't accidentally trigger them
while trying to answer a multiple-choice question. (#308)

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -108,6 +108,13 @@
                               <a class="apply-btn" href="#">Apply</a>
                             </div>
                         </div>
+                        <div class="terms none">
+                            <h5>Terms</h5>
+                            <ul>
+                                <li><span>term 1</span> definition 1</li>
+                                <li><span>term 2</span> definition 2</li>
+                            </dl>
+                        </div>
                     </div>
                 </div>
 
