--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -963,7 +963,7 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results .working-area .choices.has-drawings .choice, body.skey.results .working-area .choices.has-drawings .choice label { height: 56px; }
   body.skey.results .working-area .choice { border-top: 1px solid #999999; margin: 0; height: 44px; position: relative; }
   body.skey.results .working-area .choice .drawing { clear: left; float: right; height: 56px; margin-left: 4px; margin-right: 36px; text-align: center; width: 60px; }
-  body.skey.results .working-area .choice img, body.skey.results .working-area .choice img[id] { height: 97%; }
+  body.skey.results .working-area .choice img, body.skey.results .working-area .choice img[id] { height: auto; margin: auto; max-height: 56px; max-width: 56px; width: auto; }
   body.skey.results .working-area .choice label { display: table; font-family: Verdana, sans-serif; /* No Tahoma on iOS */ font-size: 11px; height: 44px; margin-left: 8px; position: absolute; width: 65%; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
   body.skey.results .working-area .row:first-of-type .choice:first-of-type { border-top: none; }
   body.skey.results .working-area .checked { background: #eef2e9 url(/static/images/layout/check.png) no-repeat; background-size: auto 20px; background-position: 98% center; }
