--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -961,10 +961,11 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results .working-area .choices { background: #fff; border: 1px solid #999999; border-radius: 8px; border-spacing: 0; height: 250px; margin-bottom: 6px; overflow: auto; position: fixed; width: 100%; -webkit-overflow-scrolling: touch; }
   body.skey.results .working-area .choices.has-drawings .row { height: auto; }
   body.skey.results .working-area .choices.has-drawings .choice, body.skey.results .working-area .choices.has-drawings .choice label { height: 56px; }
-  body.skey.results .working-area .choice { border-top: 1px solid #999999; margin: 0; height: 44px; position: relative; }
-  body.skey.results .working-area .choice .drawing { clear: left; float: right; height: 56px; margin-left: 4px; margin-right: 36px; text-align: center; width: 60px; }
-  body.skey.results .working-area .choice img, body.skey.results .working-area .choice img[id] { height: auto; margin: auto; max-height: 56px; max-width: 56px; width: auto; }
-  body.skey.results .working-area .choice label { display: table; font-family: Verdana, sans-serif; /* No Tahoma on iOS */ font-size: 11px; height: 44px; margin-left: 8px; position: absolute; width: 65%; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+  body.skey.results .working-area .choices.has-drawings .drawing { background-color: inherit; /*border-left: 1px solid blue;*/ /*border-right: 1px solid blue;*/ clear: left; float: left; height: 56px; margin: 0; text-align: center; width: 60px; }
+  body.skey.results .working-area .choices.has-drawings img, body.skey.results .working-area .choices.has-drawings img[id] { border: 0; height: auto; margin: auto; max-height: 56px; max-width: 56px; width: auto; }
+  body.skey.results .working-area .choices.has-drawings .choice label { width: 77%; }
+  body.skey.results .working-area .choice { border-bottom: 1px solid #999999; margin: 0; height: 44px; position: relative; }
+  body.skey.results .working-area .choice label { /*border-left: 1px solid orange;*/ /*border-right: 1px solid orange;*/ display: table; font-family: Verdana, sans-serif; /* No Tahoma on iOS */ font-size: 11px; height: 44px; margin: 0; max-width: none; min-width: none; padding-left: 4px; padding-right: 12px; width: 96%; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
   body.skey.results .working-area .row:first-of-type .choice:first-of-type { border-top: none; }
   body.skey.results .working-area .checked { background: #eef2e9 url(/static/images/layout/check.png) no-repeat; background-size: auto 20px; background-position: 98% center; }
   body.skey.results .working-area .row:first-of-type .checked:first-of-type { border-top-left-radius: 8px; border-top-right-radius: 8px; }
@@ -996,7 +997,7 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results.mobile-wide #question-nav .option-list .clear-filter { width: 50%; }
   body.skey.results.mobile-wide .species-count-heading { position: relative; text-align: center; top: -2px; width: 80%; }
   body.skey.results.mobile-inline { /* Styles for testing: mobile variant where filter values appear inline */ }
-  body.skey.results.mobile-inline .working-area { background: #fff; border: 0; height: auto; position: static; top: auto !important; -moz-box-shadow: none; -webkit-box-shadow: none; -o-box-shadow: none; box-shadow: none; }
+  body.skey.results.mobile-inline .working-area { background: #fff; border: 0; height: auto; padding: 8px 0 0; position: static; top: auto !important; width: 99%; -moz-box-shadow: none; -webkit-box-shadow: none; -o-box-shadow: none; box-shadow: none; }
   body.skey.results.mobile-inline .working-area .close { display: none; }
   body.skey.results.mobile-inline .working-area .choices { height: auto; overflow: visible; }
   body.skey.results.mobile-inline .working-area .actions { margin-bottom: 30px; }
