--- a/gobotany/static/sass/_simplekey.scss
+++ b/gobotany/static/sass/_simplekey.scss
@@ -1377,37 +1377,48 @@ ul.get-more-questions-menu {
                         .choice, .choice label {
                             height: 56px;
                         }
+                        .drawing {
+                            background-color: inherit;
+                            /*border-left: 1px solid blue;*/
+                            /*border-right: 1px solid blue;*/
+                            clear: left;
+                            float: left;
+                            height: 56px;
+                            margin: 0;
+                            text-align: center;
+                            width: 60px;
+                        }
+                        img, img[id] {
+                            border: 0;
+                            height: auto;
+                            margin: auto;
+                            max-height: 56px;
+                            max-width: 56px;
+                            width: auto;
+                        }
+                        .choice label {
+                            width: 77%;
+                        }
                     }
                 }
                 .choice {
-                    border-top: 1px solid #999;
+                    border-bottom: 1px solid #999;
                     margin: 0;
                     height: 44px;
                     position: relative;
-                    .drawing {
-                        clear: left;
-                        float: right;
-                        height: 56px;
-                        margin-left: 4px;
-                        margin-right: 36px;
-                        text-align: center;
-                        width: 60px;
-                    }
-                    img, img[id] {
-                        height: auto;
-                        margin: auto;
-                        max-height: 56px;
-                        max-width: 56px;
-                        width: auto;
-                    }
                     label {
+                        /*border-left: 1px solid orange;*/
+                        /*border-right: 1px solid orange;*/
                         display: table;
                         font-family: Verdana, sans-serif; /* No Tahoma on iOS */
                         font-size: 11px;
                         height: 44px;
-                        margin-left: 8px;
-                        position: absolute;
-                        width: 65%;
+                        margin: 0;
+                        max-width: none;
+                        min-width: none;
+                        padding-left: 4px;
+                        padding-right: 12px;
+                        width: 96%;
                         -webkit-tap-highlight-color: rgba(0,0,0,0);
                     }
                 }
@@ -1561,8 +1572,10 @@ ul.get-more-questions-menu {
                 background: #fff;
                 border: 0;
                 height: auto;
+                padding: 8px 0 0;
                 position: static;
                 top: auto !important;
+                width: 99%;
                 -moz-box-shadow: none;
                 -webkit-box-shadow: none;
                 -o-box-shadow: none;
