--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -98,7 +98,7 @@
                         src="/static/images/layout/working-area-arrow.png">
                     <a href="#" class="close"></a>
 
-                    <h4></h4>
+                    <h4 class="question"></h4>
                     <div>
                         <div class="info">
                             <div class="character-drawing"></div>
