Improve Level 3 choices layout on small screens. (#308)

--- a/gobotany/simplekey/templates/level3_test_links.html
+++ b/gobotany/simplekey/templates/level3_test_links.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Level 3 Page Smartphone User Testing</title>
+        <title>Level 3 Page: Smartphone User Testing</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/static/css/site.css">
         <style>
             body {
-                padding: 0 8px;
+                padding: 0 0.5em;
             }
             a, a:hover {
                 border-bottom: 1px solid #c3d941;
@@ -22,7 +22,7 @@
                 width: 9em;
             }
             dt, dd {
-                height: 4em;
+                height: 4.5em;
                 padding-bottom: 0.5em;
             }
             li {
@@ -33,7 +33,7 @@
     <body>
         <p><a href="/">Go Botany Home</a></p>
 
-        <h1>Level 3 Page Smartphone User Testing</h1>
+        <h1>Level 3 Page: Smartphone User Testing</h1>
 
         <p>Here are links to some variations.</p>
 
