--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -784,7 +784,7 @@ body.skey.results #question-nav .section a.clear-all-btn { background: url(/stat
 body.skey.results #question-nav .section a.clear-all-btn:hover { background-position: 0 -32px; cursor: pointer; }
 body.skey.results #question-nav .section a.clear-all-btn:active { background-position: 0 -64px; cursor: pointer; }
 body.skey.results #question-nav h6 { color: #807121; font-weight: bold; margin: 0 0 8px 0; }
-body.skey.results #question-nav .option-list > li { background: #fff; border-top: 1px solid #c3d941; cursor: pointer; display: block; line-height: normal; margin: 0; padding: 12px; }
+body.skey.results #question-nav .option-list > li { background: #fff; border-top: 1px solid #c3d941; cursor: pointer; display: block; height: auto; line-height: normal; margin: 0; padding: 12px; }
 body.skey.results #question-nav .option-list > li.last { border-bottom: 1px solid #c3d941; }
 body.skey.results #question-nav .option-list > li.answered { background: #ffd; }
 body.skey.results #question-nav .option-list > li.active, body.skey.results #question-nav .option-list > li:hover, body.skey.results #question-nav .option-list > li.active span.value, body.skey.results #question-nav .option-list > li.answered.active { background: #dce890; cursor: pointer; }
@@ -963,7 +963,8 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results .working-area .choices.has-drawings .choice, body.skey.results .working-area .choices.has-drawings .choice label { height: 56px; }
   body.skey.results .working-area .choices.has-drawings .drawing { background-color: inherit; /*border-left: 1px solid blue;*/ /*border-right: 1px solid blue;*/ clear: left; float: left; height: 56px; margin: 0; text-align: center; width: 60px; }
   body.skey.results .working-area .choices.has-drawings img, body.skey.results .working-area .choices.has-drawings img[id] { border: 0; height: auto; margin: auto; max-height: 56px; max-width: 56px; width: auto; }
-  body.skey.results .working-area .choices.has-drawings .choice label { width: 77%; }
+  body.skey.results .working-area .choices.has-drawings .choice label { width: 73%; }
+  body.skey.results .working-area .choices.has-drawings .choice:first-of-type .drawing { border-top-left-radius: 8px; }
   body.skey.results .working-area .choice { border-bottom: 1px solid #999999; margin: 0; height: 44px; position: relative; }
   body.skey.results .working-area .choice label { /*border-left: 1px solid orange;*/ /*border-right: 1px solid orange;*/ display: table; font-family: Verdana, sans-serif; /* No Tahoma on iOS */ font-size: 11px; height: 44px; margin: 0; max-width: none; min-width: none; padding-left: 4px; padding-right: 12px; width: 96%; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
   body.skey.results .working-area .row:first-of-type .choice:first-of-type { border-top: none; }
@@ -999,19 +1000,22 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results.mobile-inline { /* Styles for testing: mobile variant where filter values appear inline */ }
   body.skey.results.mobile-inline .working-area { background: #fff; border: 0; height: auto; padding: 8px 0 0; position: static; top: auto !important; width: 99%; -moz-box-shadow: none; -webkit-box-shadow: none; -o-box-shadow: none; box-shadow: none; }
   body.skey.results.mobile-inline .working-area .close { display: none; }
+  body.skey.results.mobile-inline .working-area .info { float: none; }
   body.skey.results.mobile-inline .working-area .choices { height: auto; overflow: visible; }
-  body.skey.results.mobile-inline .working-area .actions { margin-bottom: 30px; }
+  body.skey.results.mobile-inline .working-area .choice:last-of-type { border-bottom: 0; }
   body.skey.results.mobile-gloss { /* Styles for mobile variant where working- area glossary terms are shown in a list */ }
   body.skey.results.mobile-gloss .working-area .gloss { color: inherit; cursor: default; }
   body.skey.results.mobile-gloss .working-area .gloss:hover { border-bottom: 0; }
   body.skey.results.mobile-gloss .working-area .terms { display: block; }
+  body.skey.results.mobile-gloss .working-area .terms h5 { padding: 4px 0; }
   body.skey.results.mobile-gloss .working-area .terms.none h5 { display: none; }
-  body.skey.results.mobile-gloss .working-area .terms li { border: 0; line-height: 120%; margin-bottom: 4px; padding: 0; width: 100%; }
+  body.skey.results.mobile-gloss .working-area .terms ul { margin: 0; }
+  body.skey.results.mobile-gloss .working-area .terms li { border: 0; float: none; line-height: 120%; margin-bottom: 4px; padding: 0; width: 100%; }
   body.skey.results.mobile-gloss .working-area .terms li span { font-weight: bold; } }
 /* Tablet-only styles */
 @media only screen and (min-width: 601px) and (max-width: 1024px) { body.skey.results #question-nav .option-list > li.active:hover { background: #dce890; } }
 /* These styles apply to smartphones and tablets */
-@media only screen and (max-width: 1024px) { body.skey.results #question-nav .option-list > li:hover { background: #fff; /* No hover color */ } }
+@media only screen and (max-width: 1024px) { body.skey.results #question-nav .option-list > li:hover, body.skey.results #question-nav .option-list > li.active, body.skey.results #question-nav .option-list > li.answered.active { background: #fff; } }
 /* End media queries styles for Simple and Full Keys */
 /* PlantShare */
 /* Definitions */
