For Level 3 'overlay' variation on smartphones, toggle Terms. (#308)

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -108,7 +108,7 @@
                               <a class="apply-btn" href="#">Apply</a>
                             </div>
                         </div>
-                        <div class="terms none">
+                        <div class="terms none closed">
                             <h5>Terms</h5>
                             <ul>
                                 <li><span>term 1</span> definition 1</li>
