--- a/gobotany/static/sass/_simplekey.scss
+++ b/gobotany/static/sass/_simplekey.scss
@@ -461,7 +461,7 @@ body.skey {
                     color: #1a2e11;
                     margin-left: 0;
                     text-decoration: none;
-                    span.name {
+                    .name {
                         display: block;
                         font-weight: bold;
                         margin: 0 0 3px 0;
@@ -1557,6 +1557,10 @@ ul.get-more-questions-menu {
                     }
                 }
                 .option-list {
+                    .name {
+                        font-size: 11px;
+                        margin: 0;
+                    }
                     .clear-filter {
                         width: 50%;
                     }
@@ -1569,6 +1573,63 @@ ul.get-more-questions-menu {
                 width: 80%;
             }
         } /* end &.results.mobile-wide */
+
+        &.results.mobile-gloss { /* Styles for mobile variants where working-
+                                    area glossary terms are shown in a list */
+            .working-area {
+                h4 {
+                    padding-right: 50px;
+                }
+                .gloss {
+                    color: inherit;
+                    cursor: default;
+                    &:hover {
+                        border-bottom: 0;
+                    }
+                }
+                .terms {
+                    background: $light-green;
+                    border: 1px solid #666;
+                    display: block;
+                    padding: 6px 12px;
+                    position: absolute;
+                    right: 0;
+                    text-align: right;
+                    top: 0;
+                    width: 50%;
+                    &.closed {
+                        background: none;
+                        border: 0;
+                        ul {
+                            display: none;
+                        }
+                    }
+                    h5 {
+                        color: $link-green;
+                        padding: 4px 0 8px;
+                        text-decoration: underline;
+                    }
+                    &.none h5 {
+                        display: none;
+                    }
+                    ul {
+                        margin: 0;
+                        text-align: left;
+                    }
+                    li {
+                        border: 0;
+                        float: none;
+                        line-height: 120%;
+                        margin-bottom: 4px;
+                        padding: 0;
+                        width: 100%;
+                        span {
+                            font-weight: bold;
+                        }
+                    }
+                }
+            }
+        } /* end &.results.mobile-gloss */
 
         &.results.mobile-inline { /* Styles for testing: mobile variant where
                                      filter values appear inline */
@@ -1598,44 +1659,28 @@ ul.get-more-questions-menu {
                     border-bottom: 0;
                 }
             }
-
-        } /* end &.results.mobile-inline */
-
-        &.results.mobile-gloss { /* Styles for mobile variant where working-
-                                    area glossary terms are shown in a list */
-            .working-area {
-                .gloss {
-                    color: inherit;
-                    cursor: default;
-                    &:hover {
-                        border-bottom: 0;
-                    }
+            &.mobile-gloss .working-area {
+                h4 {
+                    padding-right: 0;
                 }
                 .terms {
-                    display: block;
+                    background: inherit;
+                    border: 0;
+                    padding: 4px;
+                    position: static;
+                    text-align: left;
+                    width: 100%;
+                    &.closed ul {
+                        display: block;
+                    }
                     h5 {
+                        color: #000;
                         padding: 4px 0;
-                    }
-                    &.none h5 {
-                        display: none;
-                    }
-                    ul {
-                        margin: 0;
-                    }
-                    li {
-                        border: 0;
-                        float: none;
-                        line-height: 120%;
-                        margin-bottom: 4px;
-                        padding: 0;
-                        width: 100%;
-                        span {
-                            font-weight: bold;
-                        }
+                        text-decoration: none;
                     }
                 }
             }
-        } /* end &.results.mobile-gloss */
+        } /* end &.results.mobile-inline */
     }
 }
 /* Tablet-only styles */
