Add plant quiz cards to the Teaching page. (#390)

--- a/gobotany/site/templates/gobotany/teaching.html
+++ b/gobotany/site/templates/gobotany/teaching.html
@@ -29,9 +29,25 @@
     <h2>Teaching Tools</h2>
 
     <ul>
-    
+
     <li>
     <p class="new">New</p>
+    <h3><a
+        href="/static/docs/quiz-cards-demo1.pdf"
+        target="blank">Go Botany Plant Quiz Cards</a></h3>
+    <p class="meta">PDF, 1.1 MB. Posted March 2013</p>
+    <p>
+    Practice your identification skills with these handy plant quiz cards!
+    Even when you cannot get outside or sample live plant specimens, you and
+    your students can work with these short descriptions and photographs to
+    learn about the process of identifying plants.  Some species are native to
+    New England, others considered invasive, so they are good springboards to
+    conversation. A key to the species names is included. Have fun, and let us
+    know if you use these!
+    </p>
+    </li>
+
+    <li>
     <h3><a
         href="/static/docs/new-england-science-frameworks.pdf"
         target="blank">New England Science Frameworks</a></h3>
@@ -47,7 +63,6 @@
     </li>
 
     <li>
-    <p class="new">New</p>
     <h3><a
         href="/static/docs/gobotany-plant-id-form.docx"
         target="blank">Go Botany Plant Identification Form</a></h3>
